What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

October 10, 2011
* [vincent] fix 'distcheck' rule
+ [vincent] add libopenjpeg-jpwl.pc.in
* [vincent] fix output when --disable-shared or --disable-static is passed to configure. Minor clean up of configure.ac.
! [kaori]   change -v option was reactivated for JPIP

October 07, 2011
* [mickael] WIP: correct mistake in text output inside set_decoded_area function (credit to Winfried)
+ [mickael] WIP: update jp2 dump functions with the new V2 framework
+ [mickael] WIP: update output filename of conformance dump test to be compatible with new baseline
* [mickael] WIP: correct wrong input in dump_codec function and add missing return value
* [mickael] WIP: correct mistake inside set_decoded_area function (credit to Francois De Vieilleville)
+ [mickael] WIP: backport rev 967-969 from opj-1.5 to trunk about test suite enhancement and rename of opj_configh.cmake.in

October 06, 2011
* [mickael] WIP: fix build errors with windows configuration induced by rev 960
+ [mickael] WIP: Enhance html documentation generation with cmake, add a mainpage to this documentation and bump version to 1.99.0 into the main CMakeLists (as rev951)

October 05, 2011
+ [mickael] WIP: fix the decoding process with conformance files and V2 framework 

September 30, 2011
* [vincent] fix autotools for various compilation problems
* [vincent] fix indexer compilation. Patch from Winfried
* [kaori] modified indexer for JPIP, JPP-stream

September 27, 2011
+ [mickael] WIP: enhance the event management into the new API
* [mickael] WIP: fix some warnings about a static function and j2k_read_unk_v2
+ [mickael] WIP: add basis for a new output management of the codestream information and index
* [mickael] WIP: fix some warnings from j2k_dump and index.c

September 22, 2011
* [mickael] WIP: fix build compilation (with autotools) with MJ2 option (credit to Winfried) 